src/Styles/_media.desktop.scss
/*--------------------------------------------------------*\
|   ______    __   |
|  |  __  |  |  |  |
|  | |  | |  |  |  |
|  | !__! |  |  |  |
|  !______!  !__!  |  binary : tech art
|
|  @file Desktop browser styles.
|----------------------------------------------------------
|  @author Valeriy Novytskyy
\*---------------------------------------------------------*/

header {
  font-family: $title-font;
  background: $primary-color;
  color: $primary-text-color;
  min-width: 349px;
  width: 100%;
  height: 200px;
  position: relative;
  margin-top: 9%;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

/* adorner: left corner shadow */
header:before {
  content: '';
  position: absolute;
  left: 8px;
  bottom: .1px;
  width: 1px;
  height: 12px;
  transform: skewX(45deg);
  box-shadow: 0 0 4px $drop-shadow-dark-color;
  z-index: 4;
}

.os-win header:before {
  box-shadow: -1px 0 7px $drop-shadow-transparent-color;
}

/* adorner: right corner cut */
header:after {
  content: '';
  position: absolute;
  left: 100%;
  top: -6px;
  width: 13px;
  height: 39px;
  background: $background-color;
  transform: skewX(45deg);
}

header h1 {
  position: absolute;
  left: 103px;
  top: 55px;
  margin: 0;
  font-size: $title-font-size;
  font-weight: $title-font-weight;
}

.os-win header h1 {
  font-size: $title-font-size-win;
}

.title-caret {
  position: absolute;
  width: 11pt;
  height: 4pt;
  right: -12pt;
  bottom: -3pt;
  background: $primary-text-color;
  animation: blink 1.1s linear infinite;
}
@keyframes blink {
  0% {
    opacity: 0;
  }

  25% {
    opacity: 1;
  }

  75% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

nav a {
  float: left;
  width: 88px;
  height: 67px;
}

nav {
  position: absolute;
  left: 0;
  bottom: 0;
  min-width: 299px;
  width: 100%;
  height: 66px;
}

/* adorner: bottom shadow */
nav:before {
  content: '';
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 1px;
  box-shadow: 0 0 2px $drop-shadow-light-color;
  z-index: -1;
}

.os-win nav:before {
  box-shadow: 0 0 3px $drop-shadow-transparent-color;
}

/* adorner: left corner cut */
nav:after {
  content: '';
  position: absolute;
  left: -10px;
  bottom: -2px;
  width: 17px;
  height: 17px;
  background: $background-color;
  transform: skewX(45deg);
}

.os-win nav:after {
  left: -8.5px;
  bottom: -3.5px;
}

main {
  float: left;
  position: relative;
  width: calc(100% - 22px);
  margin-left: 22px;
  font-family: $normal-font;
  font-size: $normal-font-size;
}

.os-win main {
  font-size: $normal-font-size-win;
}

main:before {
  content: '{';
  font-family: $background-font;
  font-size: 45pt;
  color: $border-color;

  float: left;
  position: relative;
  left: -29px;
  top: 26pt;
  width: 0;
}

main:after {
  content: '}';
  font-family: $background-font;
  font-size: 45pt;
  color: $border-color;

  position: relative;
  top: -1.1em;
  left: 101%;
  text-align: right;
  margin-bottom: -2em;
}

main h1 {
  font-size: $heading-font-size-large;
  text-transform: lowercase;
  padding-top: 0;
  margin-top: 0;
}

.os-win main h1 {
  font-size: $heading-font-size-large-win;
}

main h2 {
  font-size: $heading-font-size-medium;
  text-transform: lowercase;
}

.os-win main h2 {
  font-size: $heading-font-size-medium-win;
}

main h3 {
  font-size: $heading-font-size-small;
  text-transform: lowercase;
}

.os-win main h3 {
  font-size: $heading-font-size-small-win;
}

main h4 {
  font-size: $heading-font-size-smaller;
  text-transform: lowercase;
}

main h1,
main h2,
main h3,
main h4 {
  font-family: $heading-font;
  margin-bottom: $margin;
  margin-top: $margin;
}

main h2,
main h3,
main h4 {
  padding-left: 1.2em;
}

main h3,
main h4 {
  margin-left: 1.2em;
}

main h2:hover,
main h3:hover,
main h4:hover {
  .permalink-anchor {
    opacity: 1;
  }
}

main p {
  color: $foreground-color;
  margin-left: 1.4em;
  margin-top: $margin;
  margin-bottom: $margin;
}

body {
  float: none;
  margin: auto;
  width: 75%;
}

.overlay {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 100;
  background: $background-color;
}

.attention-inline {
  color: black;
}

.logo {
  position: absolute;
  left: 17px;
  top: 17px;
  width: 73px;
  height: 60px;
  font-size: 48pt;
  fill: $primary-color;
  color: $background-color;
}

.title-popup {
  display: inline;
  color: $shadow-dark-color;
}

.article {
  border-bottom: $border-thickness dotted $shadow-light-color;
}

.article-content {
  margin-top: -6pt;
}

.placeholder {
  color: $accent-text-color;
  background: $accent-color;
  padding: 3pt 5pt;
}

.placeholder:before {
  content: '';
  position: absolute;
  border-top: 8pt solid transparent;
  border-left: 8pt solid $background-color;
  margin-left: -6.5pt;
  margin-top: 8pt;
  cursor: default;
}

.placeholder:after {
  content: '';
  position: absolute;
  float: right;
  border-bottom: 8pt solid transparent;
  border-right: 8pt solid $background-color;
  margin-left: -2pt;
  margin-top: -4.5pt;
  cursor: default;
  cursor: default;
}

.callout {
  position: absolute;
  float: left;
  left: -12px;
  color: $primary-color;
}

#loading-bar-spinner .spinner-icon {
  display: none;
}

